feature for return

--- a/burn_analysis.ipynb
+++ b/burn_analysis.ipynb
@@ -1018,7 +1018,9 @@
    "id": "1abc579a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Creating a 'return' feature"
+   ]
   }
  ],
  "metadata": {
